--- a/pages/18840.html
+++ b/pages/18840.html
@@ -593,11 +593,47 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/interaction'>interacting</a> field <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/gauge+theory'>gauge theories</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gauge+transformation'>gauge symmetry</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/BRST+complex'>BRST complex</a>, <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/local+BRST+cohomology'>local BV-BRST complex</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/BV-operator'>BV-operator</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+master+equation'>quantum master equation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Ward+identity'>master Ward identity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomaly</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/interacting+field+theory'>interacting field</a> <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
 
 <ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative AQFT</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a></p>
 </li>
 
 <li>
@@ -615,6 +651,14 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a>, <a class='existingWikiWord' href='/nlab/show/S-matrix'>Feynman perturbation series</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+action+functional'>effective action</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+stability'>vacuum stability</a></p>
+</li>
 </ul>
 </li>
 
@@ -631,11 +675,17 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+group'>renormalization group</a></p>
+
+<ul>
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>Stückelberg-Petermann renormalization group</a></p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Gell-Mann-Low+renormalization+cocycle'>Gell-Mann-Low renormalization cocycle</a></p>
+</li>
+</ul>
 </li>
 </ul>
 </li>
@@ -645,6 +695,20 @@ margin-left: 0em;
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Bogoliubov%27s+formula'>Bogoliubov&#39;s formula</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/adiabatic+switching'>adiabatic limit</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/infrared+divergence'>infrared divergence</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interacting+vacuum'>interacting vacuum</a></p>
+</li>
 </ul>
 </li>
 </ul>
@@ -760,7 +824,13 @@ margin-left: 0em;
 <h3 id='perturbative_qft'>Perturbative QFT</h3>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/main+theorem+of+perturbative+renormalization'>main theorem of perturbative renormalization</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Schwinger-Dyson+equation'>Schwinger-Dyson equation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/main+theorem+of+perturbative+renormalization'>main theorem of perturbative renormalization</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -772,8 +842,8 @@ margin-left: 0em;
 
 <p>In <a class='existingWikiWord' href='/nlab/show/probability+theory'>probability theory</a>, the concept of <em>noncommutative probability space</em> or <em>quantum probability space</em> is the generalization of that of <em><a class='existingWikiWord' href='/nlab/show/probability+space'>probability space</a></em> as the concept of “space” is generalized to <a class='existingWikiWord' href='/nlab/show/noncommutative+geometry'>non-commutative geometry</a>.</p>
 
-<p>The basic idea is to encode a would-be <a class='existingWikiWord' href='/nlab/show/probability+space'>probability space</a> dually in its <a class='existingWikiWord' href='/nlab/show/algebra+of+functions'>algebra of functions</a> <math class='maruku-mathml' display='inline' id='mathml_dbc24b5e2ebc6596e636770f30c47d0411722a95_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math>, typically regarded as a <a class='existingWikiWord' href='/nlab/show/star-algebra'>star algebra</a>, and encode the <a class='existingWikiWord' href='/nlab/show/probability+distribution'>probability measure</a> as a <a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on this star algebra</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_dbc24b5e2ebc6596e636770f30c47d0411722a95_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>⟩</mo><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>𝒜</mi><mo>⟶</mo><mi>ℂ</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>The basic idea is to encode a would-be <a class='existingWikiWord' href='/nlab/show/probability+space'>probability space</a> dually in its <a class='existingWikiWord' href='/nlab/show/algebra+of+functions'>algebra of functions</a> <math class='maruku-mathml' display='inline' id='mathml_968fad8e642a13df18888873dd5d3fb7a5d150bc_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math>, typically regarded as a <a class='existingWikiWord' href='/nlab/show/star-algebra'>star algebra</a>, and encode the <a class='existingWikiWord' href='/nlab/show/probability+distribution'>probability measure</a> as a <a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on this star algebra</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_968fad8e642a13df18888873dd5d3fb7a5d150bc_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>⟩</mo><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>𝒜</mi><mo>⟶</mo><mi>ℂ</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \langle
     (-) 
   \rangle
@@ -784,15 +854,19 @@ margin-left: 0em;
   \,.
 
 </annotation></semantics></math></div>
-<p>Hence this primarily <a class='existingWikiWord' href='/nlab/show/axiom'>axiomatizes</a> the concept of <em><a class='existingWikiWord' href='/nlab/show/expectation+value'>expectation values</a></em> <math class='maruku-mathml' display='inline' id='mathml_dbc24b5e2ebc6596e636770f30c47d0411722a95_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mi>A</mi><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>\langle A\rangle</annotation></semantics></math> (<a href='#Segal65'>Segal 65</a>, <a href='#Whittle92'>Whittle 92</a>) while leaving the nature of the underlying <a class='existingWikiWord' href='/nlab/show/probability+distribution'>probability measure</a> implicit (in contrast to the classical formalization of <a class='existingWikiWord' href='/nlab/show/probability+theory'>probability theory</a> by <a class='existingWikiWord' href='/nlab/show/Andrey+Kolmogorov'>Andrey Kolmogorov</a>).</p>
+<p>Hence this primarily <a class='existingWikiWord' href='/nlab/show/axiom'>axiomatizes</a> the concept of <em><a class='existingWikiWord' href='/nlab/show/expectation+value'>expectation values</a></em> <math class='maruku-mathml' display='inline' id='mathml_968fad8e642a13df18888873dd5d3fb7a5d150bc_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mi>A</mi><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>\langle A\rangle</annotation></semantics></math> (<a href='#Segal65'>Segal 65</a>, <a href='#Whittle92'>Whittle 92</a>) while leaving the nature of the underlying <a class='existingWikiWord' href='/nlab/show/probability+distribution'>probability measure</a> implicit (in contrast to the classical formalization of <a class='existingWikiWord' href='/nlab/show/probability+theory'>probability theory</a> by <a class='existingWikiWord' href='/nlab/show/Andrey+Kolmogorov'>Andrey Kolmogorov</a>).</p>
 
-<p>Often <math class='maruku-mathml' display='inline' id='mathml_dbc24b5e2ebc6596e636770f30c47d0411722a95_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is assumed/required to be a <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a> (e.g. <a href='#Kuperberg05'>Kuperberg 05, section 1.8</a>). Often <math class='maruku-mathml' display='inline' id='mathml_dbc24b5e2ebc6596e636770f30c47d0411722a95_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is taken to be the full algebra of <a class='existingWikiWord' href='/nlab/show/bounded+operator'>bounded operators</a> on some <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a> (e.g. <a href='#Attal'>Attal, def. 7.1</a>).</p>
+<p>Often <math class='maruku-mathml' display='inline' id='mathml_968fad8e642a13df18888873dd5d3fb7a5d150bc_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is assumed/required to be a <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a> (e.g. <a href='#Kuperberg05'>Kuperberg 05, section 1.8</a>). Often <math class='maruku-mathml' display='inline' id='mathml_968fad8e642a13df18888873dd5d3fb7a5d150bc_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is taken to be the full algebra of <a class='existingWikiWord' href='/nlab/show/bounded+operator'>bounded operators</a> on some <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a> (e.g. <a href='#Attal'>Attal, def. 7.1</a>).</p>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum physics</a>, <math class='maruku-mathml' display='inline' id='mathml_dbc24b5e2ebc6596e636770f30c47d0411722a95_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/observable'>algebra of observables</a> (or a <a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>local net</a> thereof) and <math class='maruku-mathml' display='inline' id='mathml_dbc24b5e2ebc6596e636770f30c47d0411722a95_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>\langle (-)\rangle</annotation></semantics></math> is a particular <a class='existingWikiWord' href='/nlab/show/quantum+state'>quantum state</a>, for instance a <a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum physics</a>, <math class='maruku-mathml' display='inline' id='mathml_968fad8e642a13df18888873dd5d3fb7a5d150bc_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/observable'>algebra of observables</a> (or a <a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>local net</a> thereof) and <math class='maruku-mathml' display='inline' id='mathml_968fad8e642a13df18888873dd5d3fb7a5d150bc_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>\langle (-)\rangle</annotation></semantics></math> is a particular <a class='existingWikiWord' href='/nlab/show/quantum+state'>quantum state</a>, for instance a <a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/probability+amplitude'>probability amplitude</a></p>
+</li>
+
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/quantum+logic'>quantum logic</a></p>
 </li>
@@ -816,7 +890,7 @@ margin-left: 0em;
 </li>
 
 <li id='Gleason09'>
-<p>Jonathan Gleason, <em>The <math class='maruku-mathml' display='inline' id='mathml_dbc24b5e2ebc6596e636770f30c47d0411722a95_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>C^*</annotation></semantics></math>-algebraic formalism of quantum mechanics</em>, 2009 (<a href='http://www.math.uchicago.edu/~may/VIGRE/VIGRE2009/REUPapers/Gleason.pdf'>pdf</a>)</p>
+<p>Jonathan Gleason, <em>The <math class='maruku-mathml' display='inline' id='mathml_968fad8e642a13df18888873dd5d3fb7a5d150bc_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>C^*</annotation></semantics></math>-algebraic formalism of quantum mechanics</em>, 2009 (<a href='http://www.math.uchicago.edu/~may/VIGRE/VIGRE2009/REUPapers/Gleason.pdf'>pdf</a>)</p>
 </li>
 </ul>
 
@@ -857,14 +931,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 14, 2018 07:00:26 
+  Revised on January 20, 2018 12:08:33 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quantum+probability" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+probability/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/quantum+probability" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+probability" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quantum+probability" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+probability/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/quantum+probability" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+probability" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
