--- a/pages/6242.html
+++ b/pages/6242.html
@@ -326,7 +326,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/judgment'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_385565e2e1f1e8ade7c94bb31081c5096d7ace58_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_c5043a69026e110d6abbb5cad127ea454ff613c6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -1077,35 +1077,23 @@ margin-left: 0em;
 
 <p>For instance in (<a href='#Abramsky09'>Abramsky 09</a>) it is called a “non-logic”</p>
 
-<blockquote>
-<p>The term quantum logic is usually understood in connection with the 1936 Birkhoff-von Neumann proposal to consider the (closed) linear subspaces of a Hilbert space ordered by inclusion as the formal expression of the logical distinction between quantum and classical physics. While in classical logic we have deduction, the linear subspaces of a Hilbert space form a non-distributive lattice and hence there is no obvious notion of implication or deduction. Quantum logic was therefore always seen as logically very weak, or even as a non-logic. In addition, it has never given a satisfactory account of compound systems and entanglement.</p>
-</blockquote>
+<p>&gt; The term quantum logic is usually understood in connection with the 1936 Birkhoff-von Neumann proposal to consider the (closed) linear subspaces of a Hilbert space ordered by inclusion as the formal expression of the logical distinction between quantum and classical physics. While in classical logic we have deduction, the linear subspaces of a Hilbert space form a non-distributive lattice and hence there is no obvious notion of implication or deduction. Quantum logic was therefore always seen as logically very weak, or even as a non-logic. In addition, it has never given a satisfactory account of compound systems and entanglement.</p>
 
 <p>Here by “no <a class='existingWikiWord' href='/nlab/show/deduction'>deduction</a>” is meant “no <a class='existingWikiWord' href='/nlab/show/deduction+theorem'>deduction theorem</a>”.</p>
 
 <p>And for example in (<a href='#HeunenLandsmanSpitters07'>Heunen-Landsman-Spitters 07, p. 4</a>) it says the following.</p>
 
-<blockquote>
-<p>Attractive and revolutionary as this spatial quantum “logic” may appear it faces severe problems. The main logical drawbacks are:</p>
+<p>&gt; Attractive and revolutionary as this spatial quantum “logic” may appear it faces severe problems. The main logical drawbacks are:</p>
 
-<ol>
-<li>Due to its lack of distributivity, quantum ‘logic’ is difficult to interpret as a logical structure.</li>
+<p>&gt; 1. Due to its lack of distributivity, quantum ‘logic’ is difficult to interpret as a logical structure. &gt; 2. In particular, despite various proposals no satisfactory implication operator has been found (so that there is no deductive system in quantum logic). &gt; 3. Quantum ‘logic’ is a propositional language; no satisfactory generalization to predicate logic has been found.</p>
 
-<li>In particular, despite various proposals no satisfactory implication operator has been found (so that there is no deductive system in quantum logic).</li>
-
-<li>Quantum ‘logic’ is a propositional language; no satisfactory generalization to predicate logic has been found.</li>
-</ol>
-
-<p>Quantum logic is also problematic from a physical perspective. Since (by various theorems and wide agreement) quantum probabilities do not admit an ignorance interpretation, <math class='maruku-mathml' display='inline' id='mathml_385565e2e1f1e8ade7c94bb31081c5096d7ace58_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[0, 1]</annotation></semantics></math>-valued truth values attributed to propositions by pure states via the Born rule cannot be regarded as sharp (i.e. {0, 1}-valued) truth values muddled by human ignorance. This implies that, if <math class='maruku-mathml' display='inline' id='mathml_385565e2e1f1e8ade7c94bb31081c5096d7ace58_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>=</mo><mo stretchy='false'>[</mo><mi>a</mi><mo>∈</mo><mi>Δ</mi><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>X = [a \in \Delta]</annotation></semantics></math> represents a quantum-mechanical proposition, it is wrong to say that either <math class='maruku-mathml' display='inline' id='mathml_385565e2e1f1e8ade7c94bb31081c5096d7ace58_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math> or its negation holds, but we just do not know which of these alternatives applies. However, in quantum logic one has the law of the excluded middle in the form <math class='maruku-mathml' display='inline' id='mathml_385565e2e1f1e8ade7c94bb31081c5096d7ace58_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>∨</mo><msup><mi>x</mi> <mo>⊥</mo></msup><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>x \vee x^\perp = 1</annotation></semantics></math> for all <math class='maruku-mathml' display='inline' id='mathml_385565e2e1f1e8ade7c94bb31081c5096d7ace58_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math>. Thus the formalism of quantum logic does not match the probabilistic structure of quantum theory responsible for its empirical content.</p>
-</blockquote>
+<p>&gt; Quantum logic is also problematic from a physical perspective. Since (by various theorems and wide agreement) quantum probabilities do not admit an ignorance interpretation, <math class='maruku-mathml' display='inline' id='mathml_c5043a69026e110d6abbb5cad127ea454ff613c6_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[0, 1]</annotation></semantics></math>-valued truth values attributed to propositions by pure states via the Born rule cannot be regarded as sharp (i.e. {0, 1}-valued) truth values muddled by human ignorance. This implies that, if <math class='maruku-mathml' display='inline' id='mathml_c5043a69026e110d6abbb5cad127ea454ff613c6_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>=</mo><mo stretchy='false'>[</mo><mi>a</mi><mo>∈</mo><mi>Δ</mi><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>X = [a \in \Delta]</annotation></semantics></math> represents a quantum-mechanical proposition, it is wrong to say that either <math class='maruku-mathml' display='inline' id='mathml_c5043a69026e110d6abbb5cad127ea454ff613c6_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math> or its negation holds, but we just do not know which of these alternatives applies. However, in quantum logic one has the law of the excluded middle in the form <math class='maruku-mathml' display='inline' id='mathml_c5043a69026e110d6abbb5cad127ea454ff613c6_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>∨</mo><msup><mi>x</mi> <mo>⊥</mo></msup><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>x \vee x^\perp = 1</annotation></semantics></math> for all <math class='maruku-mathml' display='inline' id='mathml_c5043a69026e110d6abbb5cad127ea454ff613c6_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math>. Thus the formalism of quantum logic does not match the probabilistic structure of quantum theory responsible for its empirical content.</p>
 
 <p>But notice that one may argue that the first three points here are squarely resolved by thinking of BvN-quantum logic as embedded into <a class='existingWikiWord' href='/nlab/show/linear+logic'>linear logic</a>, we come back to this in a moment. Concerning the last point one might argue that the propositions in BvN-quantum logic concern the <a class='existingWikiWord' href='/nlab/show/quantum+measurement'>quantum measurement</a>-outcomes (only), for which, at least in some <a class='existingWikiWord' href='/nlab/show/interpretation+of+quantum+mechanics'>interpretations</a>, it does make sense to speak of a definite result.</p>
 
 <p>In (<a href='#Girard11'>Girard 11, page xii</a>) it says:</p>
 
-<blockquote>
-<p>Among the magisterial mistakes of logic, one will first mention quantum logic, whose ridiculousness can only be ascribed to a feeling of superiority of the language – and ideas, even bad, as soon as they take a written form – over the physical world. Quantum logic is indeed a sort of punishment inflicted on nature, guilty of not yielding to the prejudices of logicians… just like Xerxes had the Hellespont – which had destroyed a boat bridge – whipped.</p>
-</blockquote>
+<p>&gt; Among the magisterial mistakes of logic, one will first mention quantum logic, whose ridiculousness can only be ascribed to a feeling of superiority of the language – and ideas, even bad, as soon as they take a written form – over the physical world. Quantum logic is indeed a sort of punishment inflicted on nature, guilty of not yielding to the prejudices of logicians… just like Xerxes had the Hellespont – which had destroyed a boat bridge – whipped.</p>
 
 <p>For more and more objective criticism see (<a href='#Girard11'>Girard 11, section 17</a>).</p>
 
@@ -1113,15 +1101,11 @@ margin-left: 0em;
 
 <p>This is stated explicitly for instance in (<a href='#Pratt92'>Pratt 92, p.4</a>):</p>
 
-<blockquote>
-<p>These objections are overcome in the extension of quantum logic to linear logic as a dynamic quantum logic.</p>
-</blockquote>
+<p>&gt; These objections are overcome in the extension of quantum logic to linear logic as a dynamic quantum logic.</p>
 
 <p>Notice that the <a class='existingWikiWord' href='/nlab/show/subobject'>subobjects</a> in a category of (finite dimensional) <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert spaces</a>, and hence the <a class='existingWikiWord' href='/nlab/show/proposition'>propositions</a> in the <a class='existingWikiWord' href='/nlab/show/logic'>categorical logic</a> of Hilbert spaces, are the (closed) linear subspaces. Therefore Birkhoff-von Neumann quantum logic is indeed subsumed as a fragment of linear logic. This (obvious) fact was highlighted in (<a href='#Crown75'>Crown 75</a>) and then later with more of <a class='existingWikiWord' href='/nlab/show/logic'>categorical logic</a> in place and emphasizing <a class='existingWikiWord' href='/nlab/show/dagger+category'>dagger</a>-structures in (<a href='#Heunen08'>Heunen 08</a>, <a href='#Harding08'>Harding 08</a> <a href='#HeunenJacobs09'>Heunen-Jacobs 09</a>, <a href='#CoeckeHeunenKissinger13'>Coecke-Heunen-Kissinger 13</a>). Also (<a href='#CCGP09'>CCGP 09, section 9.3</a>):</p>
 
-<blockquote>
-<p>both orthologic (or weakenings thereof) and linear logic share the failure of lattice distributivity. In particular, the fragment of linear logic that includes just negation and the additive connectives is nothing but a version of the paraconsistent quantum logic PQL.</p>
-</blockquote>
+<p>&gt; both orthologic (or weakenings thereof) and linear logic share the failure of lattice distributivity. In particular, the fragment of linear logic that includes just negation and the additive connectives is nothing but a version of the paraconsistent quantum logic PQL.</p>
 
 <p>That seems to make much of the above-listed criticism appear in a different light. For instance there is also a natural notion of <a class='existingWikiWord' href='/nlab/show/dependent+linear+type+theory'>dependent linear type theory</a> and that does yield a well-behaved kind of <a class='existingWikiWord' href='/nlab/show/predicate+logic'>predicate logic</a> with <a class='existingWikiWord' href='/nlab/show/quantification'>quantifiers</a> for linear logic.</p>
 
@@ -1135,7 +1119,7 @@ margin-left: 0em;
 
 <p><a class='existingWikiWord' href='/nlab/show/conjunction'>conjunction</a> is given by intersection of two linear subspaces</p>
 
-<p><a class='existingWikiWord' href='/nlab/show/disjunction'>disjunction</a> however is given by forming the <a class='existingWikiWord' href='/nlab/show/vector+space'>linear space</a> of two linear subspaces. Hence <a class='existingWikiWord' href='/nlab/show/quantum+state'>quantum states</a> in the conjunction <math class='maruku-mathml' display='inline' id='mathml_385565e2e1f1e8ade7c94bb31081c5096d7ace58_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>∨</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>A \vee B</annotation></semantics></math> may be <a class='existingWikiWord' href='/nlab/show/linear+combination'>linear combinations</a> of states in <math class='maruku-mathml' display='inline' id='mathml_385565e2e1f1e8ade7c94bb31081c5096d7ace58_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_385565e2e1f1e8ade7c94bb31081c5096d7ace58_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math>. This is an incarnation of <a class='existingWikiWord' href='/nlab/show/superposition'>superposition principle</a> of <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanics</a>.</p>
+<p><a class='existingWikiWord' href='/nlab/show/disjunction'>disjunction</a> however is given by forming the <a class='existingWikiWord' href='/nlab/show/vector+space'>linear space</a> of two linear subspaces. Hence <a class='existingWikiWord' href='/nlab/show/quantum+state'>quantum states</a> in the conjunction <math class='maruku-mathml' display='inline' id='mathml_c5043a69026e110d6abbb5cad127ea454ff613c6_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>∨</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>A \vee B</annotation></semantics></math> may be <a class='existingWikiWord' href='/nlab/show/linear+combination'>linear combinations</a> of states in <math class='maruku-mathml' display='inline' id='mathml_c5043a69026e110d6abbb5cad127ea454ff613c6_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_c5043a69026e110d6abbb5cad127ea454ff613c6_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math>. This is an incarnation of <a class='existingWikiWord' href='/nlab/show/superposition'>superposition principle</a> of <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanics</a>.</p>
 
 <p>as a result, the BvN disjunction does not <a class='existingWikiWord' href='/nlab/show/distributive+law'>distribute</a> over conjunction, and hence the BvN lattice is not a <a class='existingWikiWord' href='/nlab/show/distributive+lattice'>distributive lattice</a>.</p>
 
@@ -1166,6 +1150,10 @@ margin-left: 0em;
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+probability'>quantum probability</a></p>
+</li>
+
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/interpretation+of+quantum+mechanics'>interpretation of quantum mechanics</a></p>
 </li>
@@ -1218,10 +1206,6 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/qbit'>qbit</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+probability'>quantum probability</a></p>
 </li>
 
 <li>
@@ -1430,14 +1414,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 11, 2017 09:10:15 
+  Revised on January 20, 2018 12:12:47 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (178.6.238.60)
+  (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quantum+logic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+logic/33" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(33 revisions)</span> | <a href="/nlab/show/diff/quantum+logic" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+logic" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quantum+logic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+logic/34" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(34 revisions)</span> | <a href="/nlab/show/diff/quantum+logic" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+logic" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
